# walkie-talkie-app

./: .gitignore  2  Cargo.toml  README.md  runner.sh
scripts/: runner.sh
src/: lib.rs  main.rs
src/audio/: mod.rs
src/communication/: mod.rs
src/db/: mod.rs
src/desktop/: main.rs
src/discovery/: mod.rs
src/log/: mod.rs
src/metadata/: mod.rs
src/mobile/: main.rs
src/terminal/: audio_tmp.txt  main.rs
src/websocket/: mod.rs
structure/: state.txt
